[package]
name = "kzen-paillier"
version = "0.4.2"
edition = "2018"
description = "Efficient pure-Rust library for the Paillier partially homomorphic encryption scheme"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZenGo-X/rust-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

[dependencies]
rayon = "1.1"
serde = { version = "1.0", features = ["derive"] }
curv-kzen = { version = "0.9", default-features = false }

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"
rand = "0.6"

[features]
default = ["curv-kzen/rust-gmp-kzen"]

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"

[[example]]
name = "simple-voting"
