[package]
name = "paillier"
version = "0.2.1-alpha.0"
authors = [
  "Mario Cornejo <murdix@gmail.com>",
  "Morten Dahl <mortendahlcs@gmail.com>",
  "Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"
]
description = "A pure-Rust implementation of the Paillier encryption scheme"
keywords = [
  "paillier",
  "cryptography",
  "homomorphic-encrypt",
  "secure-computation",
  "zero-knowledge",
]
homepage = "https://github.com/mortendahl/rust-paillier"
repository = "https://github.com/mortendahl/rust-paillier"
documentation = "https://docs.rs/paillier"
license = "MIT/Apache-2.0"
categories = ["cryptography"]

[badges]
travis-ci = { repository = "mortendahl/rust-paillier" }

[features]
default = ["usegmp", "keygen" ]
keygen = []
useramp = ["ramp"]
usegmp = ["rust-gmp"]
gmp_nonsec = []

[dependencies]
num-traits = "0.2"
rand = "0.8"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
ramp = { version="0.7", optional=true }
rust-gmp = { version="0.5", optional=true }

[dev-dependencies]
bencher = "0.1"
# bencher = { git="https://github.com/snipsco-forks/bencher" }
serde_json = "1.0"

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[bench]]
name = "proof"
harness = false
